[conf] add a test against traefik_metrics_influxdb_endpoint

--- a/templates/traefik.toml.j2
+++ b/templates/traefik.toml.j2
@@ -186,7 +186,7 @@ format = "json"
 #    insecureSkipVerify = true
 
 [metrics]
-{% if traefik_metrics_influxdb_endpoint != "" %}
+{% if traefik_metrics_influxdb_endpoint is defined and traefik_metrics_influxdb_endpoint != "" %}
   # InfluxDB metrics exporter type
   [metrics.influxdb]
     # InfluxDB's address.
