--- a/templates/traefik.toml.j2
+++ b/templates/traefik.toml.j2
@@ -188,7 +188,7 @@ format = "json"
 #    insecureSkipVerify = true
 
 [metrics]
-{% if traefik_metrics_influxdb_endpoint is defined and traefik_metrics_influxdb_endpoint != "" %}
+{% if traefik_metrics_influxdb_endpoint is defined and traefik_metrics_influxdb_endpoint != None %}
   # InfluxDB metrics exporter type
   [metrics.influxdb]
     # InfluxDB's address.
